1.8.0+build.3 fix: adjust chat window alignment

--- a/src/Lobby/ChatWindow/ChatWindow.css
+++ b/src/Lobby/ChatWindow/ChatWindow.css
@@ -115,7 +115,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	justify-content: flex-end;
+	justify-content: flex-start;
 	margin: 0;
 	margin-right: .5em;
 }
